[tool.poetry]
name = "projeto_pyspark"
version = "0.1.0"
description = ""
authors = ["victor <victorsoaresferreira09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
findspark = "^2.0.1"
pyspark = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
